--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -28,12 +28,40 @@ body {
 }
 /* fin de la navbar */
 
+/* parallax */
+/* fin du parallax */
+
 /* bannière */
 #banner {
     background-color: #14213D
 }    
 /* fin de la bannière */
 
-
-
 /* Fin de la page d'accueil */
+
+/* page a l'affiche */
+
+/* début du slider */
+  swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  /* fin du slider */
+
+/* fin de la page a l'affiche */
